@@ -15,4 +15,4 @@ WORKDIR /home/gradle/src/testing/lib
 
 EXPOSE 5001
 			
-CMD java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5001 -XX:+PrintFlagsFinal -XX:+PrintGCDetails $JAVA_OPTIONS  -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=$JMX_PORT -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -cp "*" org.z.entities.engine.Main;
+CMD java  $JAVA_OPTIONS -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5001 -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=$JMX_PORT -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -cp "*" org.z.entities.engine.Main;
